# BIOCHAIN-v2

./: .gitignore  ESTADO_ACTUAL.md  README.md
backend/: .gitignore  README.md  package-lock.json  package.json
backend/src/: index.ts
backend/src/config/: env.ts
backend/src/constants/: index.ts
backend/src/middleware/: errorHandler.ts  rateLimiter.ts
backend/src/routes/: biocredit.ts  clinicalHistory.ts  pdf.ts  reports.ts  studies.ts
backend/src/services/: biocreditService.ts  clinicalHistoryService.ts  paymentOrchestrator.ts  pdfGenerator.ts  pdfService.ts  reportEngine.ts  reportStorage.ts  sorobanService.ts  studyService.ts
backend/src/utils/: cache.ts  errors.ts  logger.ts  validation.ts
contracts/: .gitignore  Cargo.toml  README.md
contracts/biocredit_token/: Cargo.toml
contracts/payment_contract/: Cargo.toml
contracts/study_registry/: Cargo.toml
contracts/study_registry/src/: lib.rs  test.rs
docs/: ANALISIS_MEJORAS.md  Pendiente.md  RESUMEN_PROYECTO.md
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/success/: page.tsx
frontend/backend/: package-lock.json  package.json
frontend/components/: BioCreditPurchase.tsx  ClinicalHistoryForm.tsx  ContributorDashboard.tsx  Header.tsx  PDFUploadForm.tsx  ReportRequestForm.tsx  Toaster.tsx
frontend/config/: wallet-kit.ts
frontend/frontend/: package-lock.json
frontend/hooks/: useBioCredits.ts  useFilteredStudies.ts  usePayments.ts  useStudies.ts  wallet.hook.ts
frontend/lib/: biocredit.ts  soroban.ts
frontend/providers/: wallet.provider.tsx
(+9 files in other folders)
