[package]
name = "study_registry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = [
    "soroban-sdk/std",
]
testutils = [
    "soroban-sdk/testutils",
]

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

